<resources>
    <string name="app_name">prm_zad1</string>
    <string name="product_name">Product name</string>
    <string name="category">Category</string>
    <string-array name="category">
        <item>Medicine</item>
        <item>Cosmetic</item>
        <item>Food</item>
    </string-array>
    <string name="quantity">Quantity</string>
    <string name="unit">Unit</string>
    <string name="is_deleted">Is deleted</string>
    <string name="expiration_date">Expiration date</string>
    <string name="product_image">Product image</string>
    <string-array name="category_filter">
        <item>Medicine</item>
        <item>Cosmetic</item>
        <item>Food</item>
        <item>All categories</item>
    </string-array>
    <string-array name="state_filter">
        <item>Expired</item>
        <item>Valid</item>
        <item>All states</item>
    </string-array>
    <string name="quantity_empty_info">Quantity cannot be empty.</string>
    <string name="unit_empty_info">Unit cannot be empty.</string>
    <string name="name_empty_info">Name cannot be empty.</string>
    <string name="remove_question">Do you want to remove product?</string>
    <string name="remove_answer_yes">Yes</string>
    <string name="remove_answer_no">No</string>
    <string name="expired_product">Product has already been expired. Can not be edited.</string>
    <string name="count_products_on_list">Number of filtered products: %d</string>
    <string name="is_deleted_true">Ejected</string>
    <string name="is_deleted_false">Valid</string>
</resources>