<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                   xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                   android:layout_height="wrap_content" app:cardCornerRadius="8dp"
                                   app:cardElevation="8dp"
                                   android:layout_marginTop="8dp" android:layout_marginBottom="4dp"
                                   android:layout_marginRight="12dp" android:layout_marginLeft="12dp"
>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:id="@+id/isDeleted"
                app:layout_constraintStart_toStartOf="@+id/productName"
                app:layout_constraintEnd_toEndOf="@+id/productName"
                android:text="@string/is_deleted"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintTop_toBottomOf="@+id/category"
                android:textSize="12sp" android:layout_marginTop="4dp"/>
        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:id="@+id/productUnit"
                app:layout_constraintStart_toStartOf="@+id/productName"
                app:layout_constraintEnd_toEndOf="@+id/productName"
                app:layout_constraintHorizontal_bias="0.0"
                android:textSize="12sp" android:layout_marginTop="4dp"
                app:layout_constraintTop_toBottomOf="@+id/quantity" android:text="@string/unit"/>
        <ImageView
                android:layout_width="130dp"
                android:layout_height="130dp" tools:srcCompat="@tools:sample/avatars" android:id="@+id/image"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="12dp"
                android:layout_marginStart="12dp" android:layout_marginBottom="12dp"
                app:layout_constraintVertical_bias="0.499" android:scaleType="fitCenter"
                android:adjustViewBounds="true"/>
        <TextView
                android:text="@string/product_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:id="@+id/productName"
                app:layout_constraintTop_toTopOf="@+id/image" app:layout_constraintStart_toEndOf="@+id/image"
                android:layout_marginStart="24dp" android:textSize="14sp"
                android:textStyle="bold" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
                android:layout_marginTop="4dp"/>
        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:id="@+id/expirationDate"
                android:layout_marginTop="4dp"
                app:layout_constraintTop_toBottomOf="@+id/productName"
                app:layout_constraintStart_toStartOf="@+id/productName"
                app:layout_constraintEnd_toEndOf="@+id/productName"
                android:text="@string/expiration_date"
                android:textSize="12sp"/>
        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:id="@+id/category"
                app:layout_constraintStart_toStartOf="@+id/productName"
                app:layout_constraintEnd_toEndOf="@+id/productName"
                android:text="@string/category"
                app:layout_constraintHorizontal_bias="1.0" android:layout_marginTop="4dp"
                app:layout_constraintTop_toBottomOf="@+id/expirationDate" android:textSize="12sp"/>
        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:id="@+id/quantity"
                app:layout_constraintStart_toStartOf="@+id/productName"
                app:layout_constraintEnd_toEndOf="@+id/productName"
                android:text="@string/quantity"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintTop_toBottomOf="@+id/isDeleted" android:layout_marginTop="4dp"
                android:textSize="12sp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>