<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:id="@+id/editScrollView"
            android:scrollbarStyle="insideInset" android:verticalScrollbarPosition="defaultPosition"
            android:scrollbarSize="4dp" android:scrollbars="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".fragment.EditFragment" android:id="@+id/edit">
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:ems="10"
                android:id="@+id/productName"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="16dp" android:layout_marginEnd="16dp"
                app:layout_constraintStart_toEndOf="@+id/productNameLabel" app:layout_constraintHorizontal_bias="0.5"
                android:textSize="18sp" android:textStyle="bold" android:minHeight="48dp"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:ems="10"
                android:id="@+id/unit"
                app:layout_constraintStart_toStartOf="@+id/quntity" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/quntity" android:textSize="18sp" android:minHeight="48dp"/>
        <TextView
                android:text="@string/category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/categoryLabel"
                app:layout_constraintStart_toStartOf="@+id/productNameLabel"
                app:layout_constraintBaseline_toBaselineOf="@+id/category"/>
        <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/category"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/productName"
                app:layout_constraintStart_toStartOf="@+id/productName" android:spinnerMode="dropdown"
                android:minHeight="48dp"
                android:entries="@array/category"/>
        <TextView
                android:text="@string/quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/quantityLabel"
                app:layout_constraintStart_toStartOf="@+id/categoryLabel"
                app:layout_constraintBaseline_toBaselineOf="@+id/quntity"/>
        <TextView
                android:text="@string/product_name"
                android:layout_width="wrap_content"
                android:layout_height="16dp" android:id="@+id/productNameLabel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBaseline_toBaselineOf="@+id/productName" android:layout_marginStart="16dp"
                app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/productName"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/quntity"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/category" app:layout_constraintStart_toStartOf="@+id/category"
                android:textSize="18sp" android:minHeight="48dp"/>
        <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/isDeleted"
                app:layout_constraintStart_toStartOf="@+id/unit" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/unit" android:minWidth="48dp" android:minHeight="48dp"/>
        <TextView
                android:text="@string/is_deleted"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/isExpiredLabel"
                app:layout_constraintBaseline_toBaselineOf="@+id/isDeleted"
                app:layout_constraintStart_toStartOf="@+id/unitLabel"/>
        <TextView
                android:text="@string/expiration_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/expirationDateLabel"
                app:layout_constraintStart_toStartOf="@+id/isExpiredLabel" android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@+id/isExpiredLabel"/>
        <CalendarView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/expirationDate"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.491"
                app:layout_constraintTop_toBottomOf="@+id/expirationDateLabel" android:layout_marginTop="8dp"
                android:layout_marginStart="16dp" android:layout_marginEnd="16dp"/>
        <TextView
                android:text="@string/unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/unitLabel"
                app:layout_constraintBaseline_toBaselineOf="@+id/unit"
                app:layout_constraintStart_toStartOf="@+id/quantityLabel"/>
        <com.google.android.material.button.MaterialButton
                android:id="@+id/btSave"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:insetLeft="0dp"
                android:insetTop="0dp"
                android:insetRight="0dp"
                android:insetBottom="0dp"
                app:icon="@android:drawable/ic_menu_save"
                app:iconGravity="textStart"
                app:iconPadding="0dp"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                app:cornerRadius="8dp"
                app:iconSize="32dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/images"
                app:layout_constraintEnd_toEndOf="parent"/>
        <TextView
                android:text="@string/product_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/productImage"
                app:layout_constraintStart_toStartOf="@+id/expirationDateLabel"
                app:layout_constraintTop_toBottomOf="@+id/expirationDate" android:layout_marginTop="8dp"
                android:textSize="14sp"/>
        <androidx.recyclerview.widget.RecyclerView
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:id="@+id/images" app:layout_constraintTop_toBottomOf="@+id/productImage"
                android:layout_marginTop="8dp" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:listitem="@layout/product_image"
        />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>